--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="restrict_calendar">Calendar</string>
     <string name="restrict_calling">Calling (phone, SMS, MMS)</string>
     <string name="restrict_contacts">Contacts</string>
+    <string name="restrict_dictionary">Dictionary (user)</string>
     <string name="restrict_identification">Identification (device)</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Location (fine/coarse)</string>
