--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -30,6 +30,7 @@
     <string name="restrict_calendar">Ημερολόγιο</string>
     <string name="restrict_calling">Κλήσεις (τηλέφωνο, SMS, MMS)</string>
     <string name="restrict_contacts">Επαφές</string>
+    <string name="restrict_dictionary">Dictionary (user)</string>
     <string name="restrict_identification">Ταυτότητα (συσκευή)</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Τοποθεσία (ακριβής/μερική)</string>
