--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -30,6 +30,7 @@
     <string name="restrict_calendar">Calendario</string>
     <string name="restrict_calling">Llamadas (teléfono, SMS, MMS)</string>
     <string name="restrict_contacts">Contactos</string>
+    <string name="restrict_dictionary">Dictionary (user)</string>
     <string name="restrict_identification">Identificación (dispositivo)</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Ubicacíon (fina/gruesa)</string>
