--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -30,6 +30,7 @@
     <string name="restrict_calendar">カレンダー</string>
     <string name="restrict_calling">通話 (電話, SMS, MMS)</string>
     <string name="restrict_contacts">連絡先</string>
+    <string name="restrict_dictionary">Dictionary (user)</string>
     <string name="restrict_identification">ID (端末)</string>
     <string name="restrict_internet">インターネット</string>
     <string name="restrict_location">位置情報 (高/低精度)</string>
