--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -30,6 +30,7 @@
     <string name="restrict_calendar">Kalender</string>
     <string name="restrict_calling">Oproepen (telefoon, SMS, MMS)</string>
     <string name="restrict_contacts">Contacten</string>
+    <string name="restrict_dictionary">Woordenboek (gebruiker)</string>
     <string name="restrict_identification">Identificatie (apparaat)</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Locatie (fijn/grof)</string>
