--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -30,6 +30,7 @@
     <string name="restrict_calendar">Calendar</string>
     <string name="restrict_calling">Conversatii (apeluri, SMS, MMS)</string>
     <string name="restrict_contacts">Contacte</string>
+    <string name="restrict_dictionary">Dictionary (user)</string>
     <string name="restrict_identification">Date de identificare (dispozitivul propriu)</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Locatie (fina/in mare)</string>
