--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -38,7 +38,7 @@
     <string name="restrict_messages">הודעות (סמס,הודעת מולטימדיה)</string>
     <string name="restrict_network">רשת (כתובות)</string>
     <string name="restrict_phone">טלפון(מזהה, מספרים, שיחות)</string>
-    <string name="restrict_storage">זיכרון חיצוני</string>
+    <string name="restrict_storage">Storage (media, SD card)</string>
     <string name="restrict_shell">Shell (commands, superuser)</string>
     <string name="restrict_system">מערכת(אפליקציות מוגבלות)</string>
     <string name="restrict_view">גישה לממשק משתמש</string>
