--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <string name="app_name">XPrivacy</string>
-    <string name="app_wrongandroid">Δοκιμασμένο μόνο σε έκδόσεις Android 4.1 και 4.2 (JellyBean)</string>
+    <string name="app_wrongandroid">Δοκιμασμένο μόνο σε έκδόσεις Android 4.0, 4.1 και 4.2</string>
     <string name="app_notxposed" formatted="false">Δεν έχει εγκατασταθεί η έκδοση %d+ του Xposed framework</string>
     <string name="app_notenabled">Το XPrivacy δεν είναι ενεργοποιημένο στο Xposed installer</string>
     <string name="app_version" formatted="false">Έκδοση XPrivacy: %s (%d)</string>
