--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <string name="app_name">XPrivacy</string>
-    <string name="app_wrongandroid">Nur getestet mit Android Version 4.1 and 4.2 (JellyBean)</string>
+    <string name="app_wrongandroid">Nur getestet mit Android Version 4.0, 4.1 and 4.2</string>
     <string name="app_notxposed" formatted="false">Xposed Framework Version %d+ ist nicht installiert</string>
     <string name="app_notenabled">XPrivacy wurde in Xposed nicht aktiviert</string>
     <string name="app_version" formatted="false">XPrivacy Version: %s (%d)</string>
