--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">XPrivacy</string>
     <string name="app_notxposed" formatted="false">La version %d+ du cadre d\'applications Xposed n\'est pas installée</string>
     <string name="app_notenabled">XPrivacy n\'est pas activé dans l\'installateur Xposed</string>
-    <string name="app_wrongandroid">Testé uniquement sous Android version 4.1 et 4.2 (JellyBean)</string>
+    <string name="app_wrongandroid">Testé uniquement sous Android version 4.0, 4.1 et 4.2</string>
     <string name="app_version" formatted="false">Version XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Version du cadre d\'application Xposed : %d</string>
     <string name="app_copyright">Droits d\'auteur: M. Bokhorst (M66B) \u00A9 2013 </string>
