--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">XPrivacy</string>
     <string name="app_notxposed" formatted="false">Xposed framework バージョン %d+ がインストールされていません</string>
     <string name="app_notenabled">XPrivacyがXposed installerで有効になっていません</string>
-    <string name="app_wrongandroid">Androidバージョン4.1と4.2(JellyBean)でのみテスト済みです</string>
+    <string name="app_wrongandroid">Only tested with Android version 4.0, 4.1 and 4.2</string>
     <string name="app_version" formatted="false">XPrivacy バージョン: %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed framework バージョン: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
