--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">XPrivacy</string>
     <string name="app_notxposed" formatted="false">Xposed framework version %d+ nie jest zainstalowany</string>
     <string name="app_notenabled">XPrivacy nie został włączony w instalatorze Xposed</string>
-    <string name="app_wrongandroid">Testowane tylko z Androidem w wersji 4.1 and 4.2 (JellyBean)</string>
+    <string name="app_wrongandroid">Testowane tylko z Androidem w wersji 4.0, 4.1 and 4.2</string>
     <string name="app_version" formatted="false">Wersja XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Wersja Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
