--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <string name="app_name">XPrivacy</string>
-    <string name="app_wrongandroid">Testirano samo na Androidu različice 4.1 in 4.2 (JellyBean)</string>
+    <string name="app_wrongandroid">Testirano samo na Androidu različice 4.0, 4.1 in 4.2</string>
     <string name="app_notxposed" formatted="false">Xposed framework različice %d+ ni nameščen</string>
     <string name="app_notenabled">XPrivacy ni omogočen v Xposed installer</string>
     <string name="app_version" formatted="false">XPrivacy različica: %s (%d)</string>
