Updated French translation

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -3,34 +3,34 @@
     <string name="app_name">XPrivacy</string>
     <string name="app_notxposed" formatted="false">La version %d+ du cadre d\'applications Xposed n\'est pas installée</string>
     <string name="app_notenabled">XPrivacy n\'est pas activé dans l\'installateur Xposed</string>
-    <string name="app_wrongandroid">Testé uniquement sous Android version 4.0, 4.1 et 4.2</string>
+    <string name="app_wrongandroid">Testé sous Android version 4.0, 4.1 et 4.2</string>
     <string name="app_version" formatted="false">Version XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Version du cadre d\'application Xposed : %d</string>
     <string name="app_copyright">Droits d\'auteur: M. Bokhorst (M66B) \u00A9 2013 </string>
     <string name="app_info">Info: https://github.com/M66B/XPrivacy/</string>
     <string name="menu_settings">Paramètres</string>
-    <string name="menu_update">Vérification des mises à jour</string>
+    <string name="menu_update">Vérifier les mises à jour</string>
     <string name="menu_report">Signaler un problème</string>
     <string name="menu_export">Exporter</string>
     <string name="menu_import">Importer</string>
-    <string name="menu_theme">Switch theme</string>
+    <string name="menu_theme">Changer de thème</string>
     <string name="menu_pro">Version pro</string>
     <string name="menu_about">À propos</string>
-    <string name="menu_all">All</string>
-    <string name="menu_app_launch">Launch</string>
-    <string name="menu_app_settings">Settings</string>
+    <string name="menu_all">Tous</string>
+    <string name="menu_app_launch">Lancer</string>
+    <string name="menu_app_settings">Paramètres</string>
     <string name="menu_app_store">Play Store</string>
     <string name="msg_noupdate">Pas de mises à jour disponible</string>
     <string name="msg_restricted" formatted="false">%s restreint par XPrivacy</string>
     <string name="msg_licensed" formatted="false">Autorisé à: %s</string>
-    <string name="msg_done">Done</string>
+    <string name="msg_done">Effectué</string>
     <string name="restrict_accounts">Comptes (Google, Facebook, etc)</string>
     <string name="restrict_boot">Boot (se lance au démarrage)</string>
     <string name="restrict_browser">Navigateur (marque-pages/historique)</string>
     <string name="restrict_calendar">Calendrier</string>
     <string name="restrict_calling">Appels (Téléphone, SMS, MMS)</string>
     <string name="restrict_contacts">Contacts</string>
-    <string name="restrict_dictionary">Dictionary (user)</string>
+    <string name="restrict_dictionary">Dictionnaire (utilisateur)</string>
     <string name="restrict_identification">Identification (Matériel)</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Localisation (précise/approximative)</string>
@@ -42,13 +42,13 @@
     <string name="restrict_shell">Shell (commandes, root)</string>
     <string name="restrict_system">Système (applis installées)</string>
     <string name="restrict_view">Vue (navigateur)</string>
-    <string name="title_category">Category to restrict:</string>
+    <string name="title_category">Catégorie à restreindre:</string>
     <string name="title_restrict">Vérifier les restrictions:</string>
     <string name="settings_expert">Mode expert</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
-    <string name="settings_mac">MAC address</string>
-    <string name="settings_phone">Phone number</string>
+    <string name="settings_mac">addresse MAC</string>
+    <string name="settings_phone">Numéro de téléphone</string>
     <string name="settings_id">Android ID</string>
     <string name="help_application">Application</string>
     <string name="help_internet">a les permissions Internet</string>
