--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -47,7 +47,7 @@
     <string name="settings_expert">Mode expert</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
-    <string name="settings_mac">addresse MAC</string>
+    <string name="settings_mac">adresse MAC</string>
     <string name="settings_phone">Numéro de téléphone</string>
     <string name="settings_id">Android ID</string>
     <string name="help_application">Application</string>
