--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -20,7 +20,7 @@
     <string name="menu_app_launch">Lancer</string>
     <string name="menu_app_settings">Paramètres</string>
     <string name="menu_app_store">Play Store</string>
-    <string name="msg_noupdate">Pas de mises à jour disponible</string>
+    <string name="msg_noupdate">Pas de mise à jour disponible</string>
     <string name="msg_restricted" formatted="false">%s restreint par XPrivacy</string>
     <string name="msg_licensed" formatted="false">Autorisé à: %s</string>
     <string name="msg_done">Effectué</string>
@@ -38,7 +38,7 @@
     <string name="restrict_messages">Messages (SMS, MMS)</string>
     <string name="restrict_network">Réseaux (addresses)</string>
     <string name="restrict_phone">Téléphone (ID, numéros, appels)</string>
-    <string name="restrict_storage">Stockage (media, carte SD)</string>
+    <string name="restrict_storage">Stockage (média, carte SD)</string>
     <string name="restrict_shell">Shell (commandes, root)</string>
     <string name="restrict_system">Système (applis installées)</string>
     <string name="restrict_view">Vue (navigateur)</string>
