--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1,58 +1,58 @@
 <resources>
 
     <string name="app_name">XPrivacy</string>
-    <string name="app_notxposed" formatted="false">Xposed framework версии %d+ не установлен</string>
-    <string name="app_notenabled">Модуль XPrivacy не включен в  Xposed installer</string>
-    <string name="app_wrongandroid">Тестировалось только с Android 4.0, 4.1 и 4.2</string>
-    <string name="app_version" formatted="false">XPrivacy версия: %s (%d)</string>
-    <string name="app_xversion" formatted="false">Xposed framework версия: %d</string>
+    <string name="app_notxposed" formatted="false">Не установлен Xposed framework версии %d+</string>
+    <string name="app_notenabled">Модуль XPrivacy не активирован в Xposed installer</string>
+    <string name="app_wrongandroid">Работа проверялась только на Android версии 4.0 и выше</string>
+    <string name="app_version" formatted="false">Версия XPrivacy: %s (%d)</string>
+    <string name="app_xversion" formatted="false">Версия Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
-    <string name="app_info">Info: https://github.com/M66B/XPrivacy/</string>
-    <string name="menu_settings">Настройки</string>
+    <string name="app_info">Подробнее о программе: https://github.com/M66B/XPrivacy/</string>
+    <string name="menu_settings">Параметры</string>
     <string name="menu_update">Проверить обновления</string>
     <string name="menu_report">Сообщить об ошибке</string>
-    <string name="menu_export">Экспорт</string>
-    <string name="menu_import">Импорт</string>
-    <string name="menu_theme">Сменить тему</string>
+    <string name="menu_export">Экспорт настроек</string>
+    <string name="menu_import">Импорт настроек</string>
+    <string name="menu_theme">Переключить тему</string>
     <string name="menu_pro">Pro-версия</string>
     <string name="menu_about">О программе</string>
-    <string name="menu_all">Все</string>
-    <string name="menu_app_launch">Запустить</string>
-    <string name="menu_app_settings">Настройки</string>
+    <string name="menu_all">Выделить все</string>
+    <string name="menu_app_launch">Запустить приложение</string>
+    <string name="menu_app_settings">Настройки приложения</string>
     <string name="menu_app_store">Play Маркет</string>
-    <string name="msg_noupdate">Обновлений не найдено</string>
+    <string name="msg_noupdate">Обновлений нет</string>
     <string name="msg_restricted" formatted="false">%s запрещено XPrivacy</string>
-    <string name="msg_licensed" formatted="false">Лицензия: %s</string>
+    <string name="msg_licensed" formatted="false">Владелец лицензии: %s</string>
     <string name="msg_done">Готово</string>
-    <string name="restrict_accounts">Аккаунты (Google, Facebook, etc)</string>
-    <string name="restrict_boot">Автозагрузка (запуск при старте системы)</string>
-    <string name="restrict_browser">Браузер (bookmarks/history)</string>
+    <string name="restrict_accounts">Учетные записи (Google, Facebook и т.д.)</string>
+    <string name="restrict_boot">При включении устройства</string>
+    <string name="restrict_browser">Браузер (закладки/история)</string>
     <string name="restrict_calendar">Календарь</string>
-    <string name="restrict_calling">Звонки (phone, SMS, MMS)</string>
+    <string name="restrict_calling">Инициация звонков, отправка SMS/MMS</string>
     <string name="restrict_contacts">Контакты</string>
-    <string name="restrict_dictionary">Словарь (пользователь)</string>
-    <string name="restrict_identification">Идентификация (устройство)</string>
+    <string name="restrict_dictionary">Пользовательский словарь</string>
+    <string name="restrict_identification">Идентификатор устройства</string>
     <string name="restrict_internet">Интернет</string>
-    <string name="restrict_location">Местоположение (точное/примерное)</string>
-    <string name="restrict_media">Мультимедиа (аудио, видео, фото)</string>
+    <string name="restrict_location">Местоположение (точное/приблизительное)</string>
+    <string name="restrict_media">Медиа (аудио, фото, видео)</string>
     <string name="restrict_messages">Сообщения (SMS, MMS)</string>
     <string name="restrict_network">Сеть (адреса)</string>
-    <string name="restrict_phone">Телефон (ID, номера, звонки)</string>
-    <string name="restrict_storage">Хранилище (media, SD card)</string>
-    <string name="restrict_shell">Оболочка (команды, superuser)</string>
+    <string name="restrict_phone">Телефон (ID, номера, журнал вызовов)</string>
+    <string name="restrict_storage">Хранилище (медиа, карта памяти)</string>
+    <string name="restrict_shell">команды shell (вкл. суперпользователя)</string>
     <string name="restrict_system">Система (установленные приложения)</string>
     <string name="restrict_view">Просмотр (браузер)</string>
-    <string name="title_category">Категория для запрета:</string>
-    <string name="title_restrict">Отметьте для запрета:</string>
-    <string name="settings_expert">Режим эксперта</string>
+    <string name="title_category">Зпретить категорию:</string>
+    <string name="title_restrict">Отметьте приложения:</string>
+    <string name="settings_expert">Расширенный режим</string>
     <string name="settings_lat">Широта</string>
     <string name="settings_lon">Долгота</string>
     <string name="settings_mac">MAC-адрес</string>
     <string name="settings_phone">Номер телефона</string>
     <string name="settings_id">Android ID</string>
     <string name="help_application">Приложение</string>
-    <string name="help_internet">имеет доступ в интернет</string>
-    <string name="help_granted">имеет разрешения Android</string>
-    <string name="help_used">использовало эти данные</string>
+    <string name="help_internet">запрашивает доступ в интернет</string>
+    <string name="help_granted">имеет разрешение Android</string>
+    <string name="help_used">данные уже использовались</string>
 
 </resources>
