--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -33,7 +33,7 @@
     <string name="restrict_dictionary">Słownik (użytkownik)</string>
     <string name="restrict_identification">Identyfikacja (urządzenie)</string>
     <string name="restrict_internet">Internet</string>
-    <string name="restrict_location">Położenie (dokładne/zgrubne)</string>
+    <string name="restrict_location">Położenie (dokładne/przybliżone)</string>
     <string name="restrict_media">Media (audio, foto, wideo)</string>
     <string name="restrict_messages">Wiadomości (SMS, MMS)</string>
     <string name="restrict_network">Sieć (adresy)</string>
@@ -53,6 +53,6 @@
     <string name="help_application">Aplikacja</string>
     <string name="help_internet">posiada dostęp do internetu</string>
     <string name="help_granted">posiada dostęp do uprawnień Androida</string>
-    <string name="help_used">użyła dostpu do danych</string>
+    <string name="help_used">użyła dostępu do danych</string>
 
 </resources>
