--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -23,6 +23,7 @@
     <string name="msg_noupdate">Neuste Version bereits installiert</string>
     <string name="msg_restricted" formatted="false">%s beschränkt durch XPrivacy</string>
     <string name="msg_licensed" formatted="false">Lizensiert für: %s</string>
+    <string name="msg_loading">Loading</string>
     <string name="msg_done">Fertig</string>
     <string name="restrict_accounts">Konten (Google, Facebook, etc.)</string>
     <string name="restrict_browser">Browser (Lesezeichen/Verlauf)</string>
