--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -23,6 +23,7 @@
     <string name="msg_noupdate">לא קיימים עדכונים</string>
     <string name="msg_restricted" formatted="false">%s מוגבל על ידי XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licensed to: %s</string>
+    <string name="msg_loading">Loading</string>
     <string name="msg_done">Done</string>
     <string name="restrict_accounts">חשבונות (גוגל, פייסבוק וכו)</string>
     <string name="restrict_browser">דפדן(מועדפים\היסטוריה)</string>
