--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -23,6 +23,7 @@
     <string name="msg_noupdate">Brak aktualizacji</string>
     <string name="msg_restricted" formatted="false">%s jest ograniczone przez XPrivacy</string>
     <string name="msg_licensed" formatted="false">Licencjonowane dla: %s</string>
+    <string name="msg_loading">Loading</string>
     <string name="msg_done">Gotowe</string>
     <string name="restrict_accounts">Konta (Google, Facebook, etc)</string>
     <string name="restrict_browser">Przeglądarka (zakładki/historia)</string>
