--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -23,6 +23,7 @@
     <string name="msg_noupdate">Обновлений нет</string>
     <string name="msg_restricted" formatted="false">%s запрещено XPrivacy</string>
     <string name="msg_licensed" formatted="false">Владелец лицензии: %s</string>
+    <string name="msg_loading">Loading</string>
     <string name="msg_done">Готово</string>
     <string name="restrict_accounts">Учетные записи (Google, Facebook и т.д.)</string>
     <string name="restrict_browser">Браузер (закладки/история)</string>
