--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -23,6 +23,7 @@
     <string name="msg_noupdate">没有更新版本</string>
     <string name="msg_restricted" formatted="false">%s 被XPrivacy限制</string>
     <string name="msg_licensed" formatted="false">已授权给: %s</string>
+    <string name="msg_loading">Loading</string>
     <string name="msg_done">Done</string>
     <string name="restrict_accounts">账户 (Google, Facebook等等)</string>
     <string name="restrict_browser">浏览器 (书签/历史)</string>
