--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -24,7 +24,7 @@
     <string name="msg_noupdate">Güncelleştirme yok</string>
     <string name="msg_restricted" formatted="false">%s XPrivacy tarafından engellendi</string>
     <string name="msg_licensed" formatted="false">%s adına lisanslıdır.</string>
-    <string name="msg_done">Bitti.</string>
+    <string name="msg_done">Bitti</string>
     <string name="restrict_accounts">Hesaplar (Google, Facebook, vb)</string>
     <string name="restrict_browser">Tarayıcı (yer imleri/geçmiş)</string>
     <string name="restrict_calendar">Takvim</string>
@@ -36,13 +36,13 @@
     <string name="restrict_location">Konum (hassas/yaklaşık)</string>
     <string name="restrict_media">Medya (ses, fotoğraf, video)</string>
     <string name="restrict_messages">Mesajlar (SMS, MMS)</string>
-    <string name="restrict_network">Ağ (adresler (MAC) )</string>
+    <string name="restrict_network">Ağ (adresler)</string>
     <string name="restrict_nfc" translatable="false">NFC</string>
     <string name="restrict_phone">Telefon (Kimlik, numaralar, aramalar)</string>
-    <string name="restrict_storage">Hafıza (media, SD kart)</string>
+    <string name="restrict_storage">Depolama (medya, SD kart)</string>
     <string name="restrict_shell">Kabuk (komutlar, superuser)</string>
     <string name="restrict_system">Sistem (yüklü uygulamalar)</string>
-    <string name="restrict_view">View (browser)</string>
+    <string name="restrict_view">Göster (tarayıcı)</string>
     <string name="title_category">Engellenecek kategori:</string>
     <string name="title_restrict">Engellemek için işaretle:</string>
     <string name="settings_expert">Uzman modu</string>
