--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="menu_import">Import</string>
     <string name="menu_theme">Switch theme</string>
     <string name="menu_pro">Pro version</string>
+    <string name="menu_flattr" translatable="false">Flattr</string>
     <string name="menu_about">About</string>
     <string name="menu_all">All</string>
     <string name="menu_app_launch">Launch</string>
