--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -48,11 +48,11 @@
     <string name="settings_lat">Geografska širina</string>
     <string name="settings_lon">Geografska dolžina</string>
     <string name="settings_mac">MAC naslov</string>
-    <string name="settings_phone">Phone number</string>
+    <string name="settings_phone">Telefonska številka</string>
     <string name="settings_id">Android ID</string>
     <string name="help_application">Program</string>
-    <string name="help_internet">uporablja internetno dovoljenje</string>
-    <string name="help_granted">uporablja Android dovoljenja</string>
+    <string name="help_internet">uporablja internetne pravice</string>
+    <string name="help_granted">uporablja Android pravice</string>
     <string name="help_used">je uporabljal te podatke</string>
 
 </resources>
