--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -1,11 +1,11 @@
 <resources>
 
     <string name="app_name">XPrivacy</string>
-    <string name="app_notxposed" formatted="false">Xposed框架版本 %d+ 未安装</string>
-    <string name="app_notenabled">XPrivacy没有在Xposed安装程序中开启</string>
-    <string name="app_wrongandroid">Only tested with Android version 4.0, 4.1 and 4.2</string>
-    <string name="app_version" formatted="false">XPrivacy版本: %s (%d)</string>
-    <string name="app_xversion" formatted="false">Xposed框架版本: %d</string>
+    <string name="app_notxposed" formatted="false">Xposed 框架版本 %d+ 未安装</string>
+    <string name="app_notenabled">XPrivacy 没有在 Xposed 安装程序中开启</string>
+    <string name="app_wrongandroid">仅在 Android 4.0, 4.1 和 4.2 版本上测试</string>
+    <string name="app_version" formatted="false">XPrivacy 版本: %s (%d)</string>
+    <string name="app_xversion" formatted="false">Xposed 框架版本: %d</string>
     <string name="app_copyright">版权所有 \u00A9 2013 M. Bokhorst (M66B)</string>
     <string name="app_info">信息: https://github.com/M66B/XPrivacy/</string>
     <string name="menu_settings">设置</string>
@@ -13,24 +13,24 @@
     <string name="menu_report">报告问题</string>
     <string name="menu_export">导出</string>
     <string name="menu_import">导入</string>
-    <string name="menu_theme">Switch theme</string>
+    <string name="menu_theme">切换主题</string>
     <string name="menu_pro">专业版</string>
     <string name="menu_about">关于</string>
-    <string name="menu_all">All</string>
-    <string name="menu_app_launch">Launch</string>
-    <string name="menu_app_settings">Settings</string>
-    <string name="menu_app_store">Play Store</string>
+    <string name="menu_all">全部</string>
+    <string name="menu_app_launch">启动</string>
+    <string name="menu_app_settings">设置</string>
+    <string name="menu_app_store">Play 商店</string>
     <string name="msg_noupdate">没有更新版本</string>
-    <string name="msg_restricted" formatted="false">%s 被XPrivacy限制</string>
+    <string name="msg_restricted" formatted="false">%s 被 XPrivacy 限制</string>
     <string name="msg_licensed" formatted="false">已授权给: %s</string>
-    <string name="msg_loading">Loading</string>
-    <string name="msg_done">Done</string>
+    <string name="msg_loading">正在加载</string>
+    <string name="msg_done">完成</string>
     <string name="restrict_accounts">账户 (Google, Facebook等等)</string>
     <string name="restrict_browser">浏览器 (书签/历史)</string>
     <string name="restrict_calendar">日历</string>
     <string name="restrict_calling">通话 (语音, 短信, 彩信)</string>
     <string name="restrict_contacts">联系人</string>
-    <string name="restrict_dictionary">Dictionary (user)</string>
+    <string name="restrict_dictionary">词典 (用户)</string>
     <string name="restrict_identification">识别码 (设备)</string>
     <string name="restrict_internet">互联网</string>
     <string name="restrict_location">位置 (精细/粗略)</string>
@@ -38,17 +38,17 @@
     <string name="restrict_messages">信息 (短信, 彩信)</string>
     <string name="restrict_network">网络 (地址)</string>
     <string name="restrict_phone">手机 (ID, 电话号码, 通话)</string>
-    <string name="restrict_storage">Storage (media, SD card)</string>
+    <string name="restrict_storage">存储 (媒体, SD 卡)</string>
     <string name="restrict_shell">Shell (命令, 超级用户)</string>
     <string name="restrict_system">系统 (已安装的应用)</string>
     <string name="restrict_view">查看 (浏览器)</string>
-    <string name="title_category">Category to restrict:</string>
+    <string name="title_category">要限制的类别：</string>
     <string name="title_restrict">勾选以限制:</string>
     <string name="settings_expert">专家模式</string>
     <string name="settings_lat">纬度</string>
     <string name="settings_lon">经度</string>
-    <string name="settings_mac">MAC address</string>
-    <string name="settings_phone">Phone number</string>
+    <string name="settings_mac">MAC 地址</string>
+    <string name="settings_phone">手机号码</string>
     <string name="settings_id">Android ID</string>
     <string name="help_application">应用</string>
     <string name="help_internet">可以联网</string>
