--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -50,6 +50,7 @@
     <string name="settings_mac">Adres MAC</string>
     <string name="settings_phone">Numer telefonu</string>
     <string name="settings_id">Android ID</string>
+    <string name="settings_country">Country</string>
     <string name="help_application">Aplikacja</string>
     <string name="help_internet">posiada dostęp do internetu</string>
     <string name="help_granted">posiada dostęp do uprawnień Androida</string>
